Sort out persistence and seeding

--- a/withdrawal-engine-service/pom.xml
+++ b/withdrawal-engine-service/pom.xml
@@ -17,4 +17,17 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>za.co.momentum</groupId>
+            <artifactId>withdrawal-engine-domain</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>za.co.momentum</groupId>
+            <artifactId>withdrawal-engine-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
