--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <apache.commons.version>2.13.0</apache.commons.version>
         <jackson.datatype.version>2.14.2</jackson.datatype.version>
+        <aws.eventbridge.version>2.20.83</aws.eventbridge.version>
     </properties>
 
     <dependencies>
@@ -68,7 +69,7 @@
             <artifactId>spring-rabbit-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
@@ -93,12 +94,12 @@
             <version>${apache.commons.version}</version>
             <scope>provided</scope>
         </dependency>
-        <!--        <dependency>-->
-        <!--            <groupId>com.fasterxml.jackson.datatype</groupId>-->
-        <!--            <artifactId>jackson-datatype-jsr310</artifactId>-->
-        <!--            <version>${jackson.datatype.version}</version>-->
-        <!--            <scope>provided</scope>-->
-        <!--        </dependency>-->
+
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>eventbridge</artifactId>
+            <version>${aws.eventbridge.version}</version>
+        </dependency>
     </dependencies>
 
 
