--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.0.7</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -94,13 +95,5 @@
             <version>${apache.commons.version}</version>
             <scope>provided</scope>
         </dependency>
-
-        <dependency>
-            <groupId>software.amazon.awssdk</groupId>
-            <artifactId>eventbridge</artifactId>
-            <version>${aws.eventbridge.version}</version>
-        </dependency>
     </dependencies>
-
-
 </project>
