--- a/withdrawal-engine-domain/pom.xml
+++ b/withdrawal-engine-domain/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>za.co.momentum</groupId>
         <artifactId>withdrawals</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>withdrawal-engine-domain</artifactId>
