--- a/withdrawal-engine-service/pom.xml
+++ b/withdrawal-engine-service/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>za.co.momentum</groupId>
         <artifactId>withdrawals</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>withdrawal-engine-service</artifactId>
@@ -21,12 +21,12 @@
         <dependency>
             <groupId>za.co.momentum</groupId>
             <artifactId>withdrawal-engine-domain</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>za.co.momentum</groupId>
             <artifactId>withdrawal-engine-common</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 
