--- a/withdrawal-engine-web/pom.xml
+++ b/withdrawal-engine-web/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>za.co.momentum</groupId>
         <artifactId>withdrawals</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>withdrawal-engine-web</artifactId>
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>za.co.momentum</groupId>
             <artifactId>withdrawal-engine-service</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>1.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
