--- a/withdrawal-engine-domain/src/main/resources/application.properties
+++ b/withdrawal-engine-domain/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgresPlusDialect
+spring.rabbitmq.host=rabbitmq
